--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -177,7 +177,7 @@ body{
 }
 .discos{
 	justify-content: center;
-	.discos1 .discos2 .discos3{
+	.discos1{
 		display: flex;
 		align-items: center;
 		justify-content: space-evenly;
@@ -189,6 +189,53 @@ body{
 			object-fit: contain;
 		}
 	}
+	.discos2{
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+		margin: auto;
+		margin-right: 20px;
+		margin-left: 20px;
+		margin-bottom: 10px;
+		.contain{
+			object-fit: contain;
+		}
+	}
+	.discos3{
+		display: flex;
+		align-items: center;
+		justify-content: space-evenly;
+		margin: auto;
+		margin-right: 20px;
+		margin-left: 20px;
+		margin-bottom: 10px;
+		.contain{
+			object-fit: contain;
+		}
+	}
+}
+@mixin button{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: map-get($map: $palette, $key: 'Segundo');
+	color: map-get($map: $palette, $key: 'Tercero');
+	border-radius: 5px;
+	padding: .8rem 1.5rem;
+	border: 1px solid map-get($map: $palette, $key: 'Segundo');
+	cursor: pointer;
+	margin: auto;
+	margin-top: 3rem;
+	margin-bottom: 6rem;
+}
+.botones1{
+@include button;
+}
+.botones2{
+@include button;
+}
+.botones3{
+@include button;
 }
 .h4{
 	display: flex;
@@ -305,30 +352,6 @@ body{
 		}
 	}
 }
-@mixin button{
-		display: flex;
-		align-items: center;
-		justify-content: center;
-		background-color: map-get($map: $palette, $key: 'Segundo');
-		color: map-get($map: $palette, $key: 'Tercero');
-		border-radius: 5px;
-		padding: .8rem 1.5rem;
-		border: 1px solid map-get($map: $palette, $key: 'Segundo');
-		cursor: pointer;
-		margin: auto;
-		margin-top: 3rem;
-		margin-bottom: 6rem;
-	}
-.botones1{
-	@include button;
-}
-.botones2{
-	@include button;
-}
-.botones3{
-	@include button;
-}
-
 .h5{
 	display: flex;
 	align-items: center;
