--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -70,6 +70,7 @@ body {
   justify-content: center;
   font-weight: bold;
   text-align: center;
+  color: #f91fb7;
   font-size: 45px;
   font-weight: 25px;
   background-color: #fff;
@@ -108,6 +109,7 @@ body {
 .p {
   font-size: 30px;
   font-weight: bold;
+  color: #fff;
   margin: auto;
   margin-top: 1rem;
   margin-bottom: 1.5rem;
