--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -64,7 +64,7 @@ body{
 	justify-content: center;
 	font-weight: bold;
 	text-align: center;
-	color: map-get($map: $palette, $key:'segundo');
+	color: map-get($map: $palette, $key:'Segundo');
 	font-size: 45px;
 	font-weight: 25px;
 	background-color: map-get($map: $palette, $key: 'Tercero');
@@ -99,6 +99,7 @@ body{
 .p{
 	font-size: 30px;
 	font-weight: bold;
+	color: map-get($map: $palette, $key: 'Tercero');
 	margin: auto;
 	margin-top: 1rem;
 	margin-bottom: 1.5rem;
