--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -318,19 +318,20 @@ body {
   padding: auto;
 }
 
-.grupos, .grupo6, .grupo6 .grupo1, .grupo5, .grupo5 .grupo1, .grupo4, .grupo4 .grupo1, .grupo3, .grupo3 .grupo1, .grupo2, .grupo2 .grupo1, .grupos .grupo1 {
+.grupos, .grupo6, .grupo5, .grupo4, .grupo3, .grupo2, .grupo1 {
   justify-content: center;
   align-items: center;
 }
-.grupos .contain, .grupo6 .contain, .grupo5 .contain, .grupo4 .contain, .grupo3 .contain, .grupo2 .contain {
+.grupos .contain, .grupo6 .contain, .grupo5 .contain, .grupo4 .contain, .grupo3 .contain, .grupo2 .contain, .grupo1 .contain {
   -o-object-fit: contain;
      object-fit: contain;
 }
-.foto .grupos:hover, .foto .grupo6:hover, .foto .grupo6 .grupo1:hover, .grupo6 .foto .grupo1:hover, .foto .grupo5:hover, .foto .grupo5 .grupo1:hover, .grupo5 .foto .grupo1:hover, .foto .grupo4:hover, .foto .grupo4 .grupo1:hover, .grupo4 .foto .grupo1:hover, .foto .grupo3:hover, .foto .grupo3 .grupo1:hover, .grupo3 .foto .grupo1:hover, .foto .grupo2:hover, .foto .grupo2 .grupo1:hover, .grupo2 .foto .grupo1:hover, .foto .grupos .grupo1:hover, .grupos .foto .grupo1:hover {
+.grupos .foto:hover, .grupo6 .foto:hover, .grupo5 .foto:hover, .grupo4 .foto:hover, .grupo3 .foto:hover, .grupo2 .foto:hover, .grupo1 .foto:hover {
   transform: scale(1.1);
   transition: all 250ms;
 }
-.grupos .grupo1, .grupo6 .grupo1, .grupo5 .grupo1, .grupo4 .grupo1, .grupo3 .grupo1, .grupo2 .grupo1 {
+
+.grupo1 {
   display: flex;
   justify-content: space-evenly;
   margin: auto;
