--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -260,46 +260,46 @@ body {
 .botones1 {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #f91fb7;
-  color: #fff;
-  border-radius: 5px;
-  padding: 0.8rem 1.5rem;
-  border: 1px solid #f91fb7;
-  cursor: pointer;
+  justify-content: space-evenly;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 6rem;
+  background-color: #f91fb7;
+  color: #f91fb7;
+  border-radius: 5px;
+  padding: 0.2rem 1.5rem;
+  border: 1px solid #f91fb7;
+  cursor: pointer;
 }
 
 .botones2 {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #f91fb7;
-  color: #fff;
-  border-radius: 5px;
-  padding: 0.8rem 1.5rem;
-  border: 1px solid #f91fb7;
-  cursor: pointer;
+  justify-content: space-evenly;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 6rem;
+  background-color: #f91fb7;
+  color: #f91fb7;
+  border-radius: 5px;
+  padding: 0.2rem 1.5rem;
+  border: 1px solid #f91fb7;
+  cursor: pointer;
 }
 
 .botones3 {
   display: flex;
   align-items: center;
-  justify-content: center;
-  background-color: #f91fb7;
-  color: #fff;
-  border-radius: 5px;
-  padding: 0.8rem 1.5rem;
-  border: 1px solid #f91fb7;
-  cursor: pointer;
+  justify-content: space-evenly;
   margin: auto;
   margin-top: 3rem;
   margin-bottom: 6rem;
+  background-color: #f91fb7;
+  color: #f91fb7;
+  border-radius: 5px;
+  padding: 0.2rem 1.5rem;
+  border: 1px solid #f91fb7;
+  cursor: pointer;
 }
 
 .h4 {
