--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -108,11 +108,11 @@ body{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	color: map-get($map: $palette, $key: 'Segundo');
+	background-color: map-get($map: $palette, $key: 'Segundo');
+	color: map-get($map: $palette, $key:'Tercero');
 	border: 1px solid map-get($map: $palette, $key: 'Segundo');
 	border-radius: 5px;
 	padding: 0.8rem;
-	border: 1px solid map-get($map: $palette, $key: 'Segundo');
 	cursor: pointer;
 	margin: auto;
 	margin-top: 1.2rem;
@@ -386,13 +386,15 @@ body{
 	}
 }
 .button3{
-	color: map-get($map: $palette, $key: 'Tercero');
 	border-radius: 5px;
 	padding: 0.8rem;
 	margin-top: 0.8rem;
 	margin-bottom: 3rem;
 	margin-right: 26rem;
 	font-size: 16px;
+	background-color: map-get($map: $palette, $key: 'Segundo');
+	color: map-get($map: $palette, $key:'Tercero');
+	border: 1px solid map-get($map: $palette, $key: 'Segundo');
 	@media all and (max-width: 720px){
 		background-color: map-get($map: $palette, $key: 'Segundo');
 		color: map-get($map: $palette, $key:'Tercero');
