--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -132,13 +132,14 @@ body {
 }
 @media all and (max-width: 720px) {
   .button1 {
+    background-color: #f91fb7;
+    color: #fff;
+    border: 1px solid #f91fb7;
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #f91fb7;
     border-radius: 5px;
     padding: 0.8rem;
-    border: 1px solid #f91fb7;
     cursor: pointer;
     margin: auto;
     margin-top: 1.2rem;
