--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -119,13 +119,14 @@ body{
 	margin-bottom: 0.4rem;
 	font-size: 16px;
 	@media all and(max-width: 720px){
+		background-color: map-get($map: $palette, $key: 'Segundo');
+		color: map-get($map: $palette, $key:'Tercero');
+		border: 1px solid map-get($map: $palette, $key: 'Segundo');
 		display: flex;
 		align-items: center;
 		justify-content: center;
-		color: map-get($map: $palette, $key: 'Segundo');
 		border-radius: 5px;
 		padding: 0.8rem;
-		border:1px solid map-get($map: $palette, $key: 'Segundo');
 		cursor: pointer;
 		margin: auto;
 		margin-top: 1.2rem;
