--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -395,8 +395,9 @@ body {
   width: 600px;
   margin-left: 32rem;
   font-size: 18px;
+  color: #fff;
 }
-.contacto .formcontrol1 {
+.contacto .form-control1 {
   text-align: left;
   margin: auto;
   margin-top: 0.2rem;
@@ -407,7 +408,7 @@ body {
   width: 500px;
 }
 @media all and (max-width: 720px) {
-  .contacto .formcontrol1 {
+  .contacto .form-control1 {
     display: flex;
     align-items: center;
     justify-content: center;
