--- a/scss/estilos.css
+++ b/scss/estilos.css
@@ -31,7 +31,26 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 3rem 1.5rem;
+  padding: 6rem 3rem;
+}
+.header li {
+  display: inline-block;
+  list-style-type: none;
+  justify-content: space-evenly;
+  margin: auto;
+  margin-left: 10.5rem;
+}
+.header li .container-flex {
+  margin: auto;
+  margin-bottom: 20rem;
+}
+.header li .container-flex .logotaba {
+  margin: auto;
+  margin-left: 2px;
+}
+.header li .container-flex .nav-link {
+  color: #fff;
+  font-size: 18px;
 }
 @media all and (max-width: 720px) {
   .header {
@@ -44,26 +63,6 @@ body {
   }
 }
 
-.container-flex {
-  margin: auto;
-  margin-bottom: 4rem;
-}
-.container-flex .logotaba {
-  margin: auto;
-  margin-left: 0px;
-}
-.container-flex li {
-  display: inline-block;
-  list-style-type: none;
-  justify-content: space-evenly;
-  margin: auto;
-  margin-left: 10.5rem;
-}
-.container-flex li .nav-link {
-  color: #fff;
-  font-size: 18px;
-}
-
 .h1 {
   display: flex;
   align-items: center;
@@ -71,29 +70,36 @@ body {
   font-weight: bold;
   text-align: center;
   color: #f91fb7;
-  font-size: 45px;
-  font-weight: 25px;
+  font-size: 55px;
+  font-weight: 35px;
   background-color: #fff;
   display: inline;
   margin: auto;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  padding: 12px;
+  margin-top: 50rem;
+  margin-bottom: 20rem;
 }
 @media all and (max-width: 720px) {
   .h1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
     text-align: center;
     color: #f91fb7;
-    font-size: 35px;
+    font-size: 36px;
     font-weight: 20px;
     background-color: #fff;
     display: inline;
     margin: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 20rem;
+    margin-top: 20rem;
   }
 }
 
+.banner {
+  margin: auto;
+  margin-top: 1rem;
+}
 @media all and (max-width: 720px) {
   .banner {
     display: flex;
@@ -101,7 +107,7 @@ body {
     justify-items: center;
     margin: auto;
     margin-bottom: 1rem;
-    margin-top: 20px;
+    margin-top: 1rem;
     width: 80%;
   }
 }
@@ -113,6 +119,16 @@ body {
   margin: auto;
   margin-top: 1rem;
   margin-bottom: 1.5rem;
+}
+@media all and (max-width: 720px) {
+  .p {
+    font-size: 15px;
+    font-weight: bold;
+    color: #fff;
+    margin: auto;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+  }
 }
 
 .button1 {
