--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -29,7 +29,26 @@ body{
 	display: flex;
 	justify-content: space-between;
 	align-items:center;
-	padding: 3rem 1.5rem;
+	padding: 6rem 3rem;
+	li{
+		display: inline-block;
+		list-style-type:none;
+		justify-content: space-evenly;
+		margin: auto;
+		margin-left: 10.5rem;
+	.container-flex{
+		margin:auto;
+		margin-bottom: 20rem;
+		.logotaba{
+			margin: auto;
+			margin-left: 2px;
+		}
+		.nav-link{
+				color: map-get($map: $palette, $key: 'Tercero');
+				font-size: 18px;
+			}
+		}
+	}
 	@media all and (max-width:720px){
 		display:flex;
 		list-style-type: none;
@@ -39,25 +58,6 @@ body{
 		position: center;
 	}
 }
-.container-flex{
-	margin:auto;
-	margin-bottom: 4rem;
-	.logotaba{
-		margin: auto;
-		margin-left: 0px;
-	}
-	li{
-		display: inline-block;
-		list-style-type:none;
-		justify-content: space-evenly;
-		margin: auto;
-		margin-left: 10.5rem;
-	.nav-link{
-			color: map-get($map: $palette, $key: 'Tercero');
-			font-size: 18px;
-		}
-	}
-}
 .h1{
 	display:flex;
 	align-items:center;
@@ -65,34 +65,39 @@ body{
 	font-weight: bold;
 	text-align: center;
 	color: map-get($map: $palette, $key:'Segundo');
-	font-size: 45px;
-	font-weight: 25px;
+	font-size: 55px;
+	font-weight: 35px;
 	background-color: map-get($map: $palette, $key: 'Tercero');
 	display: inline;
 	margin: auto;
-	margin-top: 2rem;
-	margin-bottom: 2rem;
-	padding: 12px;
+	margin-top: 50rem;
+	margin-bottom: 20rem;
 	@media all and (max-width: 720px){
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		font-weight: bold;
 		text-align: center;
 		color: map-get($map: $palette, $key:'Segundo');
-		font-size: 35px;
+		font-size: 36px;
 		font-weight: 20px;
 		background-color: map-get($map: $palette, $key: 'Tercero');
 		display: inline;
 		margin: auto;
-		margin-bottom: 5rem;
+		margin-bottom: 20rem;
+		margin-top: 20rem;
 	}
 }
 .banner{
+	margin: auto;
+	margin-top: 1rem;
 @media all and (max-width: 720px){
 		display:flex;
 		align-items: center;
 		justify-items: center;
 		margin: auto;
 		margin-bottom: 1rem;
-		margin-top: 20px;
+		margin-top: 1rem;
 		width:80%;
 	}
 }
@@ -103,6 +108,14 @@ body{
 	margin: auto;
 	margin-top: 1rem;
 	margin-bottom: 1.5rem;
+	@media all and (max-width: 720px){
+		font-size: 15px;
+		font-weight: bold;
+		color: map-get($map: $palette, $key: 'Tercero');
+		margin: auto;
+		margin-top: 1rem;
+		margin-bottom: 1.5rem;
+	}
 }
 .button1{
 	display: flex;
