--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -22,14 +22,13 @@ body{
 	background-repeat: repeat;
 }
 .header{
-	color: map-get($map: $palette, $key: 'Tercero');
-	font-size: 15px;
-	top: 15px;
-	display: flex;
-	justify-content: space-between;
-	align-items:center;
-	padding: 6rem 3rem;
 	.container-flex{
+		color: map-get($map: $palette, $key: 'Tercero');
+		top: 15px;
+		display: flex;
+		justify-content: space-between;
+		align-items:center;
+		padding: 6rem 3rem;
 		margin:auto;
 		margin-bottom: 20rem;
 		.logotaba{
@@ -42,6 +41,8 @@ body{
 			justify-content: space-evenly;
 			margin: auto;
 			margin-left: 10.5rem;
+			margin: auto;
+			bottom: 10rem;
 			.nav-link{
 				color: map-get($map: $palette, $key: 'Tercero');
 				font-size: 18px;
